fix: cards with no images sometimes not showing preview/description text upon mouseover

--- a/src/styles/card-view.css
+++ b/src/styles/card-view.css
@@ -43,6 +43,12 @@
   object-fit: cover;
 }
 
+.rss-dashboard-cover-image-fallback {
+  object-fit: contain;
+  padding: 16px;
+  background-color: var(--background-secondary-alt);
+}
+
 .rss-dashboard-summary-overlay {
   background: var(--background-primary);
   padding: 12px;
